fix(components/molecule/drawer): Fix page scrollable issue on mobile safari

--- a/components/molecule/drawer/src/styles/index.scss
+++ b/components/molecule/drawer/src/styles/index.scss
@@ -18,6 +18,8 @@ $base-class: '.sui-MoleculeDrawer';
     position: absolute;
     background-color: $bgc-molecule-drawer;
     display: block;
+    -webkit-overflow-scrolling: touch;
+    overscroll-behavior: contain;
 
     &--animationDuration {
       transition-property: transform;
